# scrap-costco

./: .projections.json  README.md  items.csv  pyproject.toml  scrapy.cfg
config/: logging_config.yaml  parsers.yaml
scrap_costco/: constants.py  items.py  middlewares.py  pipelines.py  settings.py  utils.py
scrap_costco/spiders/: cotsco.py
tests/: test_scrap_costco.py
